# DesignPattern

./: .clang-format  .gitignore  CMakeLists.txt  ReadMe.md  main.cpp
.cache/clangd/index/: main.cpp.0540BA1E36983B09.idx
Base/: Log.h  Object.h  Test.h
C++Primer/IO/: IOTest.h  test.txt
C++Primer/Query/: AndQuery.h  BinaryQuery.h  NotQuery.h  OrQuery.h  Query.h  QueryBase.h  QueryResult.h  TextQuery.h  WordQuery.h
C++Primer/Query/Test/: QueryTest.h  story.txt
C++Primer/Query/UML/: Query.plantuml.md
CreationalPatterns/Factory/FactoryMethod/: ChicagoPizzaStore.h  ChicagoStyleCheesePizza.h  ChicagoStylePepperoniPizza.h  NYPizzaStore.h  NYStyleCheesePizza.h  NYStylePepperoniPizza.h  Pizza.h  PizzaStore.h
CreationalPatterns/Factory/Test/: FactoryTest.h
CreationalPatterns/Factory/UML/: FactoryMethod.puml  FactoryMethod.puml.md
StructalPatterns/Decorator/: Beverage.h  CondimentDecorator.h  DarkRoast.h  Decaf.h  Espresso.h  HouseBlend.h  Milk.h  Mocha.h  Soy.h  Whip.h
StructalPatterns/Decorator/Test/: DecoratorTest.h
StructalPatterns/Decorator/UML/: Decorator.puml.md
